--- a/contacto.html
+++ b/contacto.html
@@ -54,7 +54,7 @@
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="container">
             <section class="img-text-content">
                 <article class="two-col">
                     <h3>contacto</h3>
