--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="container-fluid">
             <section class="slider-content">
                 <img src="./img/slider-principal.png" alt="covid" />
             </section>
