--- a/listado-enfermedades.html
+++ b/listado-enfermedades.html
@@ -52,7 +52,7 @@
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="container">
             <h2>ENFERMEDADES</h2>
             <section class="main-filtro">
                 <article>
