--- a/mapa.html
+++ b/mapa.html
@@ -53,7 +53,7 @@
         </ul>
     </nav>
     </nav> 
-    <main>
+    <main class="container">
         <section>
             <h2>
                 mapa de hospitales disponibles
