--- a/vacunas.html
+++ b/vacunas.html
@@ -51,7 +51,7 @@
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="container">
             <h2>CENTRO DE VACUNACI&oacute;N</h2>
             <section class="img-text-content">
                 <article class="two-col">
