--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -53,7 +53,7 @@
                 <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="container">
             <section class="btn-volver">
                 <a href="listado-enfermedades.html">
                     <button>
