agrego validaciones formulario con JS

--- a/contacto.html
+++ b/contacto.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FAMEDIC - Contacto</title>
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="stylesheet" href="./css/contacto.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/contacto.css" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -58,45 +58,56 @@
             <section class="img-text-content">
                 <article class="two-col">
                     <h3>contacto</h3>
-                    <form action="#">
+                    <form action="#" onsubmit="return validarFormularioContacto()">
+                        <div class="mensajeEnvio">
+                            <p>
+                                <i class="far fa-thumbs-up"></i> 
+                                El env&iacute;o del formulario se realizo de manera satisfactoria
+                            </p>
+                        </div>
                         <div>
-                            <label for="nombre-apellido"></label>
                             <input
                                 type="text"
                                 name="nombre-apellido"
                                 id="nombre-apellido"
                                 placeholder="Ingrese su nombre y apellido"
                                 class="input-100"
-                                required
                             />
                         </div>
+                        <span class="errorMessage" id="errorNombre"></span>
                         <div>
-                            <label for="email"></label>
                             <input
-                                type="email"
+                                type="text"
                                 placeholder="Ingrese su email"
+                                name="email"
                                 class="input-100"
-                                required
+                                id="email"
+                                
                             />
                         </div>
+                        <span class="errorMessage" id="errorEmail"></span>
                         <div>
-                            <label for="telefono"></label>
                             <input
                                 type="tel"
                                 placeholder="Ingrese su teléfono (opcional)"
                                 class="input-100"
+                                id="telefono"
+                                name="telefono"
                             />
                         </div>
+                        <span class="errorMessage" id="errorTelefono"></span>
                         <div>
-                            <label for="consulta"></label>
                             <textarea
                                 name="mensaje"
                                 id="consulta"
                                 cols="30"
                                 rows="15"
                                 placeholder="Escriba aquí su consulta"
-                                required
+                                onkeyup="validarCantidadCaracteres()"
+                                maxlength="1000"
+                                onpaste="validarCantidadCaracteres()"
                             ></textarea>
+                            <span id="errorConsulta"></span>
                         </div>
                         <div>
                             <input type="submit" class="boton-enviar" value="ENVIAR"></input>
@@ -107,12 +118,7 @@
                     <h3>datos de contacto</h3>
                     <ul>
                         <li>Direcci&oacute;n: Alberdi 8942</li>
-                        <li class="telefonos">Tel&eacute;fono: 2345-9877
-                        </li>
-                        <!-- <ul class="telefonos">
-                            <li>2345-9877</li>
-                            <li>2451-7465</li>
-                        </ul> -->
+                        <li class="telefonos">Tel&eacute;fono: 2345-9877</li>
                         <li>Celular: 011-4578-9603</li>
                         <li>Email: famedic@gmail.com</li>
                     </ul>
@@ -189,5 +195,7 @@
                 </div>
             </div>
         </footer>
+        <script src="js/contacto.js"></script>
+        <!-- <script src="js/main.js"></script> -->
     </body>
 </html>
