cambio codigo de js en contacto

--- a/contacto.html
+++ b/contacto.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FAMEDIC - Contacto</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/contacto.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/contacto.css" />
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -58,65 +58,83 @@
             <section class="img-text-content">
                 <article class="two-col">
                     <h3>contacto</h3>
-                    <form action="#" onsubmit="return validarFormularioContacto()">
-                        <div class="mensajeEnvio">
-                            <p>
-                                <i class="far fa-thumbs-up"></i> 
-                                El env&iacute;o del formulario se realizo de manera satisfactoria
-                            </p>
-                        </div>
+                    <div id="exito" class="ocultar">
+                        <p><i class="fas fa-check-circle"></i> Tu env&iacute;o fue un &eacute;xito!</p>
+                    </div>
+                    <form action="#" name="formularioContacto" id="formularioContacto">
                         <div>
+                            <label for="nombreCompleto"></label>
                             <input
                                 type="text"
-                                name="nombre-apellido"
-                                id="nombre-apellido"
+                                name="nombreCompleto"
+                                id="nombreCompleto"
                                 placeholder="Ingrese su nombre y apellido"
                                 class="input-100"
                             />
                         </div>
-                        <span class="errorMessage" id="errorNombre"></span>
                         <div>
+                            <label for="email"></label>
                             <input
-                                type="text"
-                                placeholder="Ingrese su email"
+                                type="email"
                                 name="email"
+                                placeholder="Ingrese su email"
                                 class="input-100"
-                                id="email"
-                                
                             />
                         </div>
-                        <span class="errorMessage" id="errorEmail"></span>
                         <div>
+                            <label for="telefono"></label>
                             <input
-                                type="tel"
+                                type="text"
                                 placeholder="Ingrese su teléfono (opcional)"
                                 class="input-100"
-                                id="telefono"
                                 name="telefono"
                             />
                         </div>
-                        <span class="errorMessage" id="errorTelefono"></span>
-                        <div>
-                            <textarea
-                                name="mensaje"
-                                id="consulta"
-                                cols="30"
-                                rows="15"
-                                placeholder="Escriba aquí su consulta"
-                                onkeyup="validarCantidadCaracteres()"
-                                maxlength="1000"
-                                onpaste="validarCantidadCaracteres()"
-                            ></textarea>
-                            <span id="errorConsulta"></span>
+                        <div class="form-gender">
+                            <span class="form-label">Sexo</span>
+                            <br />
+                            <input
+                                type="radio"
+                                id="male"
+                                name="genero"
+                                value="male"
+                            />
+                            <label for="male">M</label>
+                            <input
+                                type="radio"
+                                id="female"
+                                name="genero"
+                                value="female"
+                            />
+                            <label for="female">F</label>
+                            <input
+                                type="radio"
+                                id="other"
+                                name="genero"
+                                value="other"
+                            />
+                            <label for="other">Otro</label>
                         </div>
                         <div>
-                            <input type="submit" class="boton-enviar" value="ENVIAR"></input>
+                            <label for="descripcion-consulta"></label>
+                            <textarea
+                                name="descripcion-consulta"
+                                id="descripcion-consulta"
+                                cols="30"
+                                rows="15"
+                                maxlength="1000"
+                                placeholder="Escriba aquí su consulta"
+                            ></textarea>
+                        </div>
+                        <ul id="errores" class="ocultar lista-errores"></ul>
+                        <div>
+                            <input type="submit" class="boton-enviar" value="ENVIAR" ></input>
                         </div>
                     </form>
                 </article>
                 <article class="two-col datos-info">
                     <h3>datos de contacto</h3>
-                    <ul>
+                    <ul class="datos-hospital">
                         <li>Direcci&oacute;n: Alberdi 8942</li>
                         <li class="telefonos">Tel&eacute;fono: 2345-9877</li>
                         <li>Celular: 011-4578-9603</li>
@@ -196,6 +214,6 @@
             </div>
         </footer>
         <script src="js/contacto.js"></script>
-        <!-- <script src="js/main.js"></script> -->
+        <script src="js/prueba.js"></script>
     </body>
 </html>
