agrego pruebas a gitignore

--- a/contacto.html
+++ b/contacto.html
@@ -102,8 +102,8 @@
                             ></textarea>
                         </div>
                         <ul id="errores" class="ocultar lista-errores"></ul>
-                        <div>
-                            <input type="submit" class="boton-enviar" value="ENVIAR" ></input>
+                        <div class="boton-enviar">
+                            <input type="submit" value="ENVIAR" ></input>
                         </div>
                     </form>
                 </article>
