modifico logica detalle, falta terminar de validar los sintomas, pero la idea es hacer el codigo un poco mas reutilizable

--- a/contacto.html
+++ b/contacto.html
@@ -71,6 +71,7 @@
                                 name="nombre-apellido"
                                 id="nombre-apellido"
                                 placeholder="(*)  Ingrese su nombre y apellido"
+                                autocomplete="off"
                                 class="input-100 campoParaVaciar"
                             />
                         </div>
@@ -81,6 +82,7 @@
                                 name="email"
                                 id="email"
                                 placeholder="(*)  Ingrese su email"
+                                autocomplete="off"
                                 class="input-100 campoParaVaciar"
                                 
                             />
@@ -92,6 +94,7 @@
                                 name="telefono"
                                 id="telefono"
                                 placeholder="Ingrese su teléfono (opcional)"
+                                autocomplete="off"
                                 class="input-100 campoParaVaciar"
                             />
                         </div>
@@ -105,6 +108,7 @@
                                 maxlength="1000"
                                 placeholder="Escriba aquí su consulta"
                                 class="campoParaVaciar"
+                                autocomplete="off"
                                 onkeyup="validarCantidadCaracteres()"
                                 onpaste="validarCantidadCaracteres()"
                             ></textarea>
@@ -197,5 +201,6 @@
             </div>
         </footer>
         <script src="js/contacto.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
