agrego modificaciones en los estilos

--- a/contacto.html
+++ b/contacto.html
@@ -58,8 +58,12 @@
             <section class="img-text-content">
                 <article class="two-col">
                     <h3>contacto</h3>
+                    <div class="campos-obligatorios">
+                        <p>Los campos con '(*)' son OBLIGATORIOS</p>
+                    </div>
+                    <br>
                     <form action="#" onsubmit="return validarFormularioContacto()">
-                        <div class="mensaje-envio ocultar">
+                        <div class="mensaje-envio ocultar" id="mensaje-envio">
                             <p>
                                 <i class="far fa-thumbs-up"></i> 
                                 El env&iacute;o del formulario se realizo de manera satisfactoria
