--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -408,14 +408,15 @@
                             name="address"
                             id="address"
                             autocomplete="off"
-                            class="input-100 ocultar"
+                            class="input-100 ocultar campoParaVaciar"
                         /><br /><br />
 
-                        <input
+                        <div class="boton-enviar">
+                            <input
                             type="submit"
-                            class="boton-enviar"
                             value="ENVIAR TEST"
                         />
+                        </div>
                     </form>
                 </article>
             </section>
