--- a/mapa.html
+++ b/mapa.html
@@ -45,11 +45,11 @@
     </header>
     <nav class="nav-bar">
         <ul>
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="listado-enfermedades.html">ENFERMEDADES</a></li>
             <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
-            <li><a href="/mapa.html">HOSPITALES</a></li>
-            <li><a href="/contacto.html">CONTACTO</a></li>
+            <li><a href="mapa.html">HOSPITALES</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
         </ul>
     </nav>
     </nav> 
